--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,15 @@
     <item name="colorAccent">@color/colorAccent</item>
   </style>
 
+  <style name="ErrorMessageText">
+    <item name="android:textSize">16sp</item>
+    <item name="android:textStyle">bold</item>
+  </style>
+
+  <style name="ErrorRetryText">
+    <item name="android:textSize">16sp</item>
+    <item name="android:textColor">@color/colorAccent</item>
+    <item name="android:background">?android:attr/selectableItemBackgroundBorderless</item>
+  </style>
+
 </resources>
