Adding Common Padding Dimension
Padding is very common dimension that we reuse, defining it in xml allows us one location to change and also the ability to tweak for different configurations

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
 <resources>
 
   <dimen name="spinner_size">54dp</dimen>
+  <dimen name="padding">16dp</dimen>
   <dimen name="spacing">8dp</dimen>
 </resources>
