--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
   <color name="colorPrimary">#3F51B5</color>
   <color name="colorPrimaryDark">#303F9F</color>
   <color name="colorAccent">#FF4081</color>
-
-  <color name="image_unloaded">#D2D2D2</color>
   
+  <color name="image_unloaded">#D2D2D2</color>
+  <color name="recipe_text_color">#FFFFFF</color>
+
 </resources>
