Adding Recipe With Image View
This view will be used to display those recipes that have an image. We will use the android card view to provide a tile like layout. Because not all of the images are the same size or ratio ive chosen to use an aspect ratio of 1. This was the most common from the images I saw so seemed like the easiest choice.

I also chose to add a backing gradient to the text to make it more legible

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,27 @@
     <item name="android:background">?android:attr/selectableItemBackgroundBorderless</item>
   </style>
 
+  <style name="RecipeCard">
+    <item name="android:foreground">?android:attr/selectableItemBackground</item>
+    <item name="cardElevation">8dp</item>
+    <item name="cardCornerRadius">6dp</item>
+  </style>
+
+  <style name="RecipeCardTextHolder">
+    <item name="android:background">@drawable/background_recipe_card_text_holder</item>
+    <item name="android:paddingTop">36dp</item>
+    <item name="android:paddingStart">@dimen/spacing</item>
+    <item name="android:paddingEnd">@dimen/spacing</item>
+    <item name="android:paddingBottom">@dimen/spacing</item>
+
+  </style>
+
+  <style name="RecipeCardText">
+    <item name="android:textSize">20sp</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:textAlignment">textEnd</item>
+  </style>
+
   <style name="RecipeTextHolder">
     <item name="android:background">@color/recipe_text_color</item>
     <item name="android:foreground">?android:attr/selectableItemBackground</item>
