--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
   <dimen name="spinner_size">54dp</dimen>
   <dimen name="padding">16dp</dimen>
   <dimen name="spacing">8dp</dimen>
+
+  <dimen name="recipe_spacing">@dimen/padding</dimen>
+
 </resources>
