--- a/app/src/main/res/layout/recycler_item_recipe_with_text.xml
+++ b/app/src/main/res/layout/recycler_item_recipe_with_text.xml
@@ -7,11 +7,16 @@
         name="recipe"
         type="com.github.ianellis.recipes.domain.getrecipes.Recipe"/>
 
+    <variable
+        name="onClick"
+        type="android.view.View.OnClickListener" />
+
   </data>
   
   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:onClick="@{onClick}"
       style="@style/RecipeTextHolder">
 
     <TextView
