--- a/app/src/main/res/layout/recycler_item_recipe_with_image.xml
+++ b/app/src/main/res/layout/recycler_item_recipe_with_image.xml
@@ -8,11 +8,16 @@
         name="recipe"
         type="com.github.ianellis.recipes.domain.getrecipes.Recipe"/>
 
+    <variable
+        name="onClick"
+        type="android.view.View.OnClickListener" />
+
   </data>
 
   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:onClick="@{onClick}"
       style="@style/RecipeCard">
 
     <com.github.ianellis.recipes.presentation.views.AspectRatioImageView
