--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
 
   <dimen name="recipe_spacing">@dimen/padding</dimen>
 
+  <dimen name="recipe_details_image_ratio" format="float" type="dimen">0.5625</dimen>
+
 </resources>
