--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,4 +56,9 @@
     <item name="android:textStyle">bold</item>
   </style>
 
+  <style name="IngredientText">
+    <item name="android:textSize">16sp</item>
+    <item name="android:textStyle">bold</item>
+  </style>
+
 </resources>
