Opening WebView from autolink handler
Adding autolink  handler to recipe details, from here we can simply launch our SimpleWebViewAcvtivty to view the link in our own in app browser (webview)

--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -8,6 +8,10 @@
         name="recipe"
         type="com.github.ianellis.recipes.domain.getrecipes.Recipe"/>
 
+    <variable
+        name="linkHandler"
+        type="kotlin.jvm.functions.Function1&lt;String,kotlin.Unit>"/>
+
   </data>
 
   <ScrollView
@@ -41,6 +45,7 @@
           android:layout_marginStart="@dimen/padding"
           android:layout_marginEnd="@dimen/padding"
           android:text="@{recipe.link}"
+          app:autolinkHandler="@{linkHandler}"
           />
 
     </LinearLayout>
